<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MainActivity">


    <include
        layout="@layout/bar_main"
        android:id="@+id/bar_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView

        android:id="@+id/cvBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bar_m"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/activarBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activar"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeColor = "@color/fondo_color"
                app:cornerRadius="20dp"


                />
            <Button
                android:id="@+id/selec_bt"
                android:layout_below="@+id/activarBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seleccionar_bluetooth"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeColor = "@color/fondo_color"
                app:cornerRadius="20dp"

                />

            <Spinner
                android:id="@+id/listaDvices"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/selec_bt"
                android:contentDescription="@string/dispositivos"
                android:textAlignment="center" />
            <Button
                android:id="@+id/conectar_bt"
                android:layout_below="@+id/listaDvices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conectar_bluetooth"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeColor = "@color/fondo_color"
                app:cornerRadius="20dp"


                />
            <Button
                android:id="@+id/desconectar_bt"
                android:layout_below="@+id/conectar_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desconectar_bluetooth"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeColor = "@color/fondo_color"
                app:cornerRadius="20dp"



                />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/status"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cvBt"
        android:text="@string/status_bt"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />


    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/status"
        app:layout_constraintBottom_toTopOf="@+id/btn30s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="30sp"

        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn30s"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/gradient"
        android:text="30s"
        app:layout_constraintBottom_toTopOf="@+id/btnDetener"
        android:layout_marginBottom="40dp"


        app:backgroundTintMode="screen"
        app:layout_constraintStart_toStartOf="parent"

        tools:layout_editor_absoluteY="635dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1min"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gradient"
        android:text="1min"
        app:layout_constraintBottom_toTopOf="@+id/btnDetener"
        android:layout_marginBottom="40dp"


        app:backgroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="635dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDetener"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gradient"
        android:text="Detener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"


        app:backgroundTintMode="screen"

         />







</androidx.constraintlayout.widget.ConstraintLayout>